--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +10,46 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.title {
+  background-color: #d0ecff;
+  border-radius: 0 5px 5px 5px;
+  color: black;
+  font-size: 2rem;
+  line-height: 1.4;
+  margin: 2em 0 0.5em;
+  padding: 0.25em 0.5em;
+  position: relative;
+  text-align: center;
+}
+
+.title:after {
+  background: #2196F3;
+  border-radius: 5px 5px 0 0;
+  bottom: 100%;
+  color: #fff;
+  font-family: "Font Aweome 5 Free",'Quicksand','Avenir','Arial',sans-serif;
+  font-size: 0.5em;
+  left: 0;
+  letter-spacing: 0.05em;
+  line-height: 1;
+  padding: 3px 7px 1px;
+  position: absolute;
+}
+
+.required:after {
+  content: '>> Required';
+}
+
+.optional:after {
+  content: '>> Optional';
+}
+
+.question {
+  background-color: #000000;
+  border-radius: 5px ;
+  font-size: 1rem;
+  margin: 10px;
+  padding: 10px;
 }
