--- a/src/Card.css
+++ b/src/Card.css
@@ -2,7 +2,7 @@
 	background-color: #111111;
 	border: 5px solid grey;
 	border-radius: 1em;
-	margin: 10% 20% 30% 20%;
+	margin: 10% 0 30% 0;
 	padding: 30px;
 	width: 100%;
 }
@@ -39,11 +39,7 @@
 }
 
 .show {
-	animation: fadeIn 1s 1s forwards;
-}
-
-.hide {
-	animation: fadeOut 1s forwards;
+	animation: fadeIn 1s forwards;
 }
 
 @keyframes fadeIn{
@@ -52,14 +48,5 @@
 	}
 	to {
 		opacity: 1;
-	}
-}
-
-@keyframes fadeOut{
-	from {
-		opacity: 1;
-	}
-	to {
-		opacity: 0;
 	}
 }
