title logo added

--- a/src/Card.css
+++ b/src/Card.css
@@ -2,7 +2,7 @@
 	background-color: #111111;
 	border: 5px solid grey;
 	border-radius: 1em;
-	margin: 10% 0 30% 0;
+	margin: 0 0 30% 0;
 	padding: 30px;
 	width: 100%;
 }
