--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+.logo {
+  width: 30vw;
+  margin: 50px;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
