--- a/src/Card.css
+++ b/src/Card.css
@@ -2,9 +2,8 @@
 	background-color: #111111;
 	border: 5px solid grey;
 	border-radius: 1em;
-	margin: 0 0 30% 0;
 	padding: 30px;
-	width: 100%;
+	width: 75vw;
 }
 
 .title {
